sentiment-profile-persistence